# xo-engine

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: package.yml
Tools/Windows/Powershell/: Build.psm1  Build_Windows_x64.ps1  Build_Windows_x86.ps1  FindCmake.psm1  Generate.psm1  Generate_Windows_x64.ps1  Generate_Windows_x86.ps1  Package.psm1  Package_Windows_x64.ps1  Package_Windows_x86.ps1
xo-engine/xo-demo/: CMakeLists.txt
xo-engine/xo-demo/Source/: main.cpp
xo-engine/xo-engine/: CMakeLists.txt
xo-engine/xo-engine/Include/xo-engine/: api.h
xo-engine/xo-engine/Source/: api.cpp  api_internal.h
xo-engine/xo-math/: CMakeLists.txt
xo-engine/xo-math/Include/xo-math/: Dimension.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h  xo-math-internal.h
xo-engine/xo-math/Source/: Dimension.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
